# hello_imgui

./: .gitmodules  CMakeLists.txt  Changelog.md  conf  default.nix
hello_imgui_cmake/: hello-imguiConfig.cmake  hello_imgui_add_app.cmake  hello_imgui_build_lib.cmake
hello_imgui_cmake/assets/: him_assets_desktop.cmake
hello_imgui_cmake/windows/: hello_imgui_windows.cmake
src/hello_imgui/: app_window_params.h  doc_api.md  doc_params.md  docking_params.h  dpi_aware.h  hello_imgui.h  hello_imgui_font.h  hello_imgui_logger.h  icons_material_design.h  icons_vscodicons.h  image_from_asset.h  imgui_theme.h  renderer_backend_options.h  runner_callbacks.h  runner_params.h
src/hello_imgui/impl/: hello_imgui.cpp  hello_imgui_font.cpp  hello_imgui_widgets.cpp  imgui_default_settings.cpp  imgui_theme.cpp  runner_params.cpp
src/hello_imgui/internal/: context.h  docking_details.cpp  docking_details.h  hello_imgui_assets.cpp  hello_imgui_ini_settings.cpp  hello_imgui_ini_settings.h  hello_imgui_logger.cpp  image_from_asset.cpp  image_vulkan.h  imguial_term.cpp  imguial_term.h
src/hello_imgui/widgets/: logger.cpp
src/hello_imgui_demos/: CMakeLists.txt
src/hello_imgui_demos/ecs_probe/: CMakeLists.txt  ecs_probe.main.cpp
src/hello_imgui_demos/hello_imgui_demo_classic/: hello_imgui_demo_classic.main.cpp
src/hello_imgui_demos/hello_imgui_demo_workspaces/: CMakeLists.txt  hello_imgui_demo_workspaces.main.cpp  lib.cpp  lib.hpp  provider.cpp  provider.hpp  provider_selector.cpp  view.cpp  view.hpp  (+1 more)
src/hello_imgui_test_engine_integration/: hello_imgui_test_engine_cmake.cmake
(+15 files in other folders)
